@@ -1,5 +1,6 @@
 Version 1.8.5 (2022-06-05)
  - Remove sysvars if deleted from CCU
+ - Add check for sysvar type in sensor
 
 Version 1.8.4 (2022-06-04)
 - Refactor all sysvar script
